--- a/public/views/product_detail.html
+++ b/public/views/product_detail.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <ms-mini-cart></ms-mini-cart>
 
     <div class="col-sm-3">
         <img ng-src="{{ product.picture }}" alt="{{ product.title }}">
