--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -36,12 +36,12 @@
           </div>
         </td>
         <td class="col-sm-1 col-md-1 text-center">
-          <input type="email" class="form-control">
+          <input type="text" class="form-control" ng-model="item.quantity">
         </td>
         <td class="col-sm-1 col-md-1 text-center"><strong> {{item.isSpecial ? item.specialPrice : item.price | currency}}</strong></td>
-        <td class="col-sm-1 col-md-1 text-center"><strong> {{item.isSpecial ? item.specialPrice * item.quantity : item.price * item.quantity | currency}} | currency></strong></td>
+        <td class="col-sm-1 col-md-1 text-center"><strong> {{item.isSpecial ? item.specialPrice * item.quantity : item.price * item.quantity | currency}} </strong></td>
         <td class="col-sm-1 col-md-1">
-          <button type="button" class="btn btn-danger" ng-click="removeItem()">
+          <button type="button" class="btn btn-danger" ng-click="removeItem(item.guid)">
             <span class="glyphicon glyphicon-remove"></span> Remove
           </button>
         </td>
@@ -51,7 +51,7 @@
         <td>&nbsp;</td>
         <td>&nbsp;</td>
         <td><h5>Subtotal</h5></td>
-        <td class="text-right"><h5><strong> {{cartSubtotal() | currency}}</strong></h5></td>
+        <td class="text-right"><h5><strong> {{cartSubtotal() | currency}} </strong></h5></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
@@ -65,7 +65,7 @@
         <td>&nbsp;</td>
         <td>&nbsp;</td>
         <td><h3>Total</h3></td>
-        <td class="text-right"><h3><strong>{{cartTotal() | currency}}</strong></h3></td>
+        <td class="text-right"><h3><strong> {{cartTotal() | currency}} </strong></h3></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
@@ -77,8 +77,11 @@
           </a>
         </td>
         <td>
-          <button type="button" class="btn btn-success">
-            Checkout <span class="glyphicon glyphicon-play"></span>
+          <button
+            class="btn btn-block btn-link"
+            ng-click="checkout()"
+            ng-disabled="getItemCount() < 1">
+            <img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" alt="Checkout using PayPal"/>
           </button>
         </td>
       </tr>
